<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activity_main -->
    <string name="app_name">Nutrition Guardian</string>
    <string name="action_settings">Settings</string>
    <string name="developer">© Quentin Oberson, Vincent Pont, Kevin Wyer</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!-- activity_register & Profil -->
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="registration">Please enter all the required specifications.</string>
    <string name="infoUpdate">Here you can update your profil.</string>
    <string name="registersave">Save</string>
    <string-array name="role">
        <item>Nothing selected</item>
        <item>doctor</item>
        <item>user</item>
    </string-array>
    
    <!-- doctor page -->
    <string name="follow">follow a user</string>
    <string name="profildoctor">Profil</string>
    <string name="titlemainpagedoctor">doctor page</string>
    <string name="titleFollowUser">follow a user</string>
    <string name="titleDoctorProfil">doctor profil</string>
    <string name="hintuser">search a user</string>
    <string name="followuser">show user</string>

    <!-- activity_mainpage -->
    <string name="EditProfil">Profil</string>
    <string name="EnterPlates">Enter Plates</string>
    <string name="Statistics">Statistics</string>
    <string name="Photo">Photo</string>
    <string name="titlemainpageuser">user page</string>

    <!-- Language -->
    <string name="lang_prompt">Choose a language</string>

    <string-array name="lang_arrays">
        <item>French</item>
        <item>English</item>
        <item>Deutsch</item>
    </string-array>

    <string name="title_activity_enter_plates">EnterPlates</string>
    <string name="title_activity_user_profil">UserProfil</string>
    <string name="title_activity_statistics">Statistics</string>

    <!-- Enter Plates -->
    <string name="titleplateparts">modify plate</string>
    <string name="pourcentage">0%</string>
    <string name="header">Here enter in percentage your food.</string>
    <string name="next">Next</string>
    <string name="sizePlates">Select size of the plates :</string>
    
    <string-array name="part">
        <item>No of parts</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string-array name="size">
        <item>size of plate</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    
    <string name="partsenter">continue</string>

    <string-array name="food">
        <item>Nothing Selected</item>
        <item>Vegetables</item>
        <item>Meat</item>
        <item>Carbohydrate</item>
    </string-array>
    
    <!-- Graph -->
    <string name="titlegraph">parts of the plate</string>
    <string name="graphenter">Save</string>
    <string name="hintgram">gr</string>
    
    <string name="warningpourcentage">The sum of the % of each part have to be 100%</string>
    
    <string name="warningparts">You have to select a no of parts</string>
    
    <string name="hintplates">Here you can select the type of parts and choose the % of each part</string>
	
    <!-- Profil user -->
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_test_rest">TestRestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_enter_plates_graph">EnterPlates_graph</string>

</resources>