<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5pt" >

    <Button
        android:id="@+id/button1"
        style="@style/btnStyleBreakerBay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterPlates"
        android:layout_marginTop="5pt" />

    <Button
        android:id="@+id/button2"
        style="@style/btnStyleBreakerBay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditProfil"
        android:layout_marginTop="5pt" />

    <Button
        android:id="@+id/button3"
        style="@style/btnStyleBreakerBay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Statistics"
        android:layout_marginTop="5pt" />
    
    <Button
        android:id="@+id/button4"
        style="@style/btnStyleBreakerBay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Photo"
        android:layout_marginTop="5pt" />

</LinearLayout>