<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainpage" >

    <Button
        android:id="@+id/button2"
        style="@style/btnStyleBreakerBay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonregister"
        android:text="@string/register"
        android:layout_margin="5pt"/>

    <Button
        android:id="@+id/button1"
        style="@style/btnStyleBreakerBay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140pt"
        android:layout_marginLeft="5pt"
        android:text="@string/developer" />

</LinearLayout>